Hide excess from particle.js canvas, to avoid horizontal scroll

--- a/wikilegis/static/styles/pages/_wikilegis.scss
+++ b/wikilegis/static/styles/pages/_wikilegis.scss
@@ -36,6 +36,7 @@
   display: flex;
   flex: 0 0 45%;
   justify-content: center;
+  overflow: hidden;
   position: relative;
 
 
